--- a/src/styles/css/FormImc.css
+++ b/src/styles/css/FormImc.css
@@ -52,7 +52,7 @@
    border: 0.125em solid #1a1a1a;
    border-radius: 0.9375em;
    box-sizing: border-box;
-   color: #d8d8d8;
+   color: #1ea7b1;
    cursor: pointer;
    display: inline-block;
    font-family: Roobert, -apple-system, BlinkMacSystemFont, 'Segoe UI',
@@ -80,9 +80,9 @@
 }
 
 .FormImc button:hover {
-   color: #fff;
+   color: #36e5f1;
    background-color: #1a1a1a;
-   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+   box-shadow: rgba(169, 169, 169, 0.25) 0 8px 15px;
    transform: translateY(-2px);
 }
 
@@ -91,24 +91,26 @@
    transform: translateY(0);
 }
 
+.FormImc .input-field {
+   width: 100%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 10px;
+   background-color: #1a1a1a;
+   padding: 10px 20px;
+   border-radius: 20px;
+}
+
 .FormImc input {
    max-width: 190px;
-   background-color: #f5f5f5;
+   background-color: transparent;
    color: #242424;
    padding: 0.15rem 0.5rem;
    min-height: 40px;
-   border-radius: 4px;
+   /* border-radius: 4px; */
    outline: none;
    border: none;
    line-height: 1.15;
-   box-shadow: 0px 10px 20px -18px;
-}
-
-.FormImc input:focus {
-   border-bottom: 2px solid #006770;
-   border-radius: 4px 4px 2px 2px;
-}
-
-.FormImc input:hover {
-   outline: 1px solid lightgrey;
+   color: white;
 }
