--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -20,7 +20,6 @@ body {
    width: 100%;
    height: auto;
    font-family: var(--font-default);
-   background: rgb(2,0,36);
-   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+   background-color: #19181C;
    color: white;
 }
